install(DIRECTORY DESTINATION ${CMAKE_INSTALL_PREFIX}/examples)
add_subdirectory(Taylor_Green_Vortex)
add_subdirectory(Channel)
add_subdirectory(Rayleigh–Taylor-Instability)
add_subdirectory(Shuosher)
add_subdirectory(Vortex_Transport)
add_subdirectory(SWLBI)
add_subdirectory(Wind_Tunnel_2D)
# add_subdirectory(Perfectly_Stirred_Reactor)
