install(DIRECTORY DESTINATION ${CMAKE_INSTALL_PREFIX}/examples)
add_subdirectory(Taylor_Green_Vortex)
add_subdirectory(Taylor_Green_Vortex_2D)
add_subdirectory(Channel)
add_subdirectory(Rayleigh–Taylor-Instability)
add_subdirectory(Shuosher)
add_subdirectory(sod)
add_subdirectory(Riemann2D)
add_subdirectory(Vortex_Transport)
add_subdirectory(MixingLayer)
add_subdirectory(SWLBI)
add_subdirectory(Wind_Tunnel_2D)
add_subdirectory(Taylor_Green_Vortex_with_Flame)
add_subdirectory(onedflame)
add_subdirectory(air_reactor)